# rag-sys

./: .gitignore  README.md  inspect_pdf_metadata.py  main.py  pdf_metadata.json  plano-desenvolvimento.md  pyproject.toml
data/test_documents/: doc01.md  doc02.md  doc03.txt  doc04.txt  doc05.txt  doc06.txt  doc07.md  doc09.txt  doc10.txt
src/database/: database_operations.py  database_setup.py
src/tests/: test_models.py
src/utils/: db_vectores.py  metadata_extraction.py  query_classifier.py
